# twincat-tools

./: .flake8  .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: lint.yml  publish.yml  tests.yml
docs/: conf.py  index.rst
docs/pages/: api.rst  config.rst  tools.rst
src/tctools/: __init__.py  __main__.py  common.py  format.py  format_class.py  format_rules.py  git_info.py  git_info_class.py  make_release.py  make_release_class.py  xml_sort.py  xml_sort_class.py
src/tctools/format/: __main__.py  format_class.py  format_extras.py  format_rules.py
src/tctools/git_info/: git_info_class.py
src/tctools/make_release/: __main__.py  make_release_class.py
src/tctools/patch_plc/: __main__.py  patch_plc_class.py
src/tctools/xml_sort/: __main__.py  xml_sort_class.py
tests/: conftest.py  test_common.py  test_formatter.py  test_formatting_rules.py  test_git_info.py  test_make_release.py  test_patch_plc.py  test_xml_sorter.py
tests/plc_code/: .gitignore  books.xml  books_attributes.xml  books_sorted.xml  plant_catalog.xml
tests/plc_code/TcHmiProject1/: TcHmiProject1.hmiproj  packages.config  tsconfig.json
tests/plc_code/TcHmiProject1/Themes/Base/: Base.theme
tests/plc_code/TwinCAT Project1/: .editorconfig  .gitignore  TwinCAT Project1.sln  TwinCAT Project1.tsproj
tests/plc_code/TwinCAT Project1/MyPlc/: MyPlc.plcproj  MyPlc_empty.plcproj  PlcTask.TcTTO
tests/plc_code/TwinCAT Project1/MyPlc/DUTs/: ST_Example.TcDUT
tests/plc_code/TwinCAT Project1/MyPlc/GVLs/: GVL_Version.TcGVL  GVL_Version.TcGVL.template
tests/plc_code/TwinCAT Project1/MyPlc/POUs/: FB_Example.TcPOU  FB_Full.TcPOU  FB_Full_fixed.txt  MAIN.TcPOU
tests/plc_code/TwinCAT Project1/MyPlc/POUs/Module/: FB_Module.TcPOU
tests/plc_code/TwinCAT Project1/MyPlc/POUs/Module/DUTs/: ST_ModuleCmd.TcDUT  ST_ModuleStatus.TcDUT
tests/plc_code/TwinCAT Project1/MyPlc/POUs/untracked_source/: E_UntrackedEnum.TcDUT  F_UntrackedFunc.TcPOU  MyPlc_with_untracked.plcproj.txt  MyPlc_with_untracked.plcproj.xml  README.md
tests/plc_code/TwinCAT Project1/MyPlc/POUs/untracked_source/subfolder/: DUT_UntrackedStruct.TcDUT  FB_Untracked.TcPOU
tests/plc_code/TwinCAT Project1/_Config/IO/: Device 2 (EtherCAT).xti
tests/plc_code/TwinCAT Project1/_Config/NC/: NC.xti
tests/plc_code/TwinCAT Release/: README.md
tests/plc_code/TwinCAT Release/_Boot/TwinCAT RT (x64)/: CurrentConfig.tszip  CurrentConfig.xml
tests/plc_code/TwinCAT Release/_Boot/TwinCAT RT (x64)/CurrentConfig/: MyPlc.tpzip
tests/plc_code/TwinCAT Release/_Boot/TwinCAT RT (x64)/Plc/: Port_851.app  Port_851.cid  Port_851.crc  Port_851.occ  Port_851_boot.tizip
tests/plc_release/: README.md
tests/plc_release/TwinCAT Project1/_Boot/TwinCAT RT (x64)/: CurrentConfig.tszip  CurrentConfig.xml  CurrentEventMessages.xml
tests/plc_release/TwinCAT Project1/_Boot/TwinCAT RT (x64)/CurrentConfig/: MyPlc.tpzip
tests/plc_release/TwinCAT Project1/_Boot/TwinCAT RT (x64)/Plc/: Port_851.app  Port_851.cid  Port_851.crc  Port_851.occ  Port_851_boot.tizip
