[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "twincat-tools"
version = "0.0.0"  # Overwritten by dynamic versioning
description = "A set of tools for TwinCAT projects"
authors = ["Robert Roos <robert.soor@gmail.com>"]
readme = "README.md"
license = "BSD-4-Clause"
packages = [
    { include = "tctools", from = "src"}
]

[tool.poetry.urls]
"Homepage" = "https://github.com/DEMCON/twincat-tools"
"Bug Tracker" = "https://github.com/DEMCON/twincat-tools/issues"
"Documentation" = "https://twincat-tools.readthedocs.io"

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^5.3.0"
EditorConfig = "^0.12.4"
GitPython= "^3.1.43"
tomli = { version = "^2.0.2", python = "<3.11" }

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
flake8 = "^7.1.1"
flake8-bugbear = "^24.8.19"
flake8-black = "^0.3.6"
flake8-isort = "^6.1.1"

[tool.poetry.group.doc]
optional = true
[tool.poetry.group.doc.dependencies]
sphinx = "^8.1.3"
sphinx_rtd_theme = "^3.0.1"
sphinx-argparse = "^0.5.2"

[tool.poetry.scripts]
tc_format = "tctools.format.__main__:main_argv"
tc_xml_sort = "tctools.xml_sort.__main__:main_argv"
tc_git_info = "tctools.git_info.__main__:main_argv"
tc_make_release = "tctools.make_release.__main__:main_argv"

[tool.poetry-dynamic-versioning]
enable = true

# ----------- Other tools -----------

[tool.black]
# Empty

[tool.isort]
profile = "black"
skip_gitignore = true

# [flake8]
# See `.flake8`, no support for `pyproject.toml` yet
