[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "twincat-tools"
dynamic = ["version"]
description = "A set of tools for TwinCAT projects"
authors = [
    { name = "Robert Roos", email = "robert.soor@gmail.com" },
]
readme = "README.md"
license = "BSD-4-Clause"
requires-python = ">=3.10"
dependencies = [
    "lxml >= 5.3.0",
    "EditorConfig >= 0.12.4",
    "GitPython >= 3.1.43",
    "tomli >= 2.0.2 ; python_version<'3.11'",
]

[project.urls]
"Homepage" = "https://github.com/DEMCON/twincat-tools"
"Bug Tracker" = "https://github.com/DEMCON/twincat-tools/issues"
"Documentation" = "https://twincat-tools.readthedocs.io"

[project.scripts]
tc_format = "tctools.format.__main__:main_argv"
tc_xml_sort = "tctools.xml_sort.__main__:main_argv"
tc_git_info = "tctools.git_info.__main__:main_argv"
tc_make_release = "tctools.make_release.__main__:main_argv"
tc_patch_plc = "tctools.patch_plc.__main__:main_argv"

[tool.poetry]
packages = [
    { include = "tctools", from = "src"}
]
version = "0.0.0"  # Overwritten by dynamic versioning

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.3"
pytest-cov = ">=5.0.0"
pytest-mock = ">=3.14.0"
ruff = ">=0.15.0"

[tool.poetry.group.doc]
optional = true
[tool.poetry.group.doc.dependencies]
sphinx = ">=8.1.3"
sphinx_rtd_theme = ">=3.0.1"
sphinx-argparse = ">=0.5.2"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry-dynamic-versioning.substitution]
files = ["src/tctools/__init__.py"]

# ----------- Other tools -----------

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
]
